fix: rem fix, aligning

--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -200,8 +200,8 @@
   content: attr(data-placeholder);
   display: block;
   font-style: italic;
-  margin-top: -1.42rem;
-  min-height: 1rem;
+  margin-top: -1.15rem;
+  min-height: 0.81rem;
   pointer-events: none;
 }
 
